crates/keron-lang/tests/corpus/errors/check/read_file_non_nullable_assign.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: type mismatch: expected `String`, found `String?`
  --> 5:22
  |
5 | val direct: String = read_file("./partials/header.txt")
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
